5.1.0
 * Various usability improvements
 * Improved support for non-google chrome browsers

Mailcenter:
 * Added option to send e-mails to other recipients than the target user
 * Added support for variables in e-mail subjects

5.0.0
 * Added new Selvbetjening Admin (SAdmin) interface, replacing the old admin interface
 * Improved mailcenter to support both mass e-mail and event triggered e-mails
 * Added integration with Vanilla forum 2
 * Refactoring of architecture
 * Removed a number of bundled dependencies from contrib in favour of a pip requirements file

4.1.0
 * Added price to suboptions

4.0.0
General:
 * Lots of small bugfixes and improvements
 * Removed own form rendering library in favor for django-uni-form
 * Added support for breadcrumbs

Logging:
 * Rewrote logging framework to use the database
 * Added admin interface
 * Added RSS interface

Admin:
 * Removed tiny-mce editor support (resulting HTML were a mess)

Notify:
 * Rewritten notify modules for more stability and added a new management api

Profile:
 * Improved profile management interface
 * Added public profiles with privacy settings (facebook-style)
 * Added page to change username

Event registration
 * Improved event registration interface
 * Merged different invoices into one single status page
 * Added email on registration

Dependencies:
 * Now requires Django 1.2
 * Now requires South 0.7**
 * Now requires django-uni-form**
 * Now requires sorl-thumbnail**
 * Removed requirement for sqlalchamy

 ** provided in the contrib folder, so no external installation is required

3.0.0
 * Improved support for additional languages.
 * Improved selection of date of birth.
 * Added country field to member profiles.
 * Removed dependency of textile markup, now using pure html.
 * Added option to send e-mails to users which have selected an option in a group.
 * Simplified setting files.
 * Moved some dependencies into a contrib folder for easier installation.