@@ -10,6 +10,9 @@ class OutgoingAdmin(SModelAdmin):
         name = 'outgoing'
         model = Message
         default_views = ('list', 'change',)
+        
+        display_name = _(u'Outgoing E-mail')
+        display_name_plural = _(u'Outgoing E-mails')
 
     list_display = ('to_address', 'subject',)
     search_fields = ('subject', 'to_address')
